# AxumSocial

./: README.md
AxumSocial/: Cargo.toml
AxumSocial/migrations/2025-05-25-180436_create_users/: up.sql
AxumSocial/migrations/2025-05-26-132838_create_user_follows/: down.sql  up.sql
AxumSocial/migrations/2025-06-03-202633_create_posts/: up.sql
AxumSocial/src/: controller.rs  main.rs  model.rs  repository.rs  schema.rs  service.rs
AxumSocial/src/controller/: post_controller.rs  user_controller.rs
AxumSocial/src/model/: post.rs  user.rs  user_follow.rs
AxumSocial/src/repository/: post_repository.rs  user_follow_repository.rs  user_repository.rs
AxumSocial/src/service/: post_service.rs  user_service.rs
axum-social-react/: index.html  package.json
axum-social-react/src/: App.tsx
axum-social-react/src/components/post/: AddPostComponent.tsx  PostCard.tsx
axum-social-react/src/components/user/: AllUsersPage.tsx  UserCard.tsx  UserPage.tsx
axum-social-react/src/model/: Post.ts  User.ts
