[package]
name = "AxumSocial"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38.0", features = ["full"]}
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["cors"] }

chrono = { version = "0.4.38" , features = ["serde"] }

deadpool = {version = "0.12.1", features = ["managed"]}
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }

diesel = { version = "2.2.2", features = ["chrono"]}
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }


serde = { version = "1.0.204", features = ["derive"] }
serde_json = {version = "1.0.120"}

dotenvy = "0.15.7"